Fix email service
